--- a/.chezmoitemplates/nvim_linux_64.sh.tmpl
+++ b/.chezmoitemplates/nvim_linux_64.sh.tmpl
@@ -1,3 +1,3 @@
-curl -LO https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz
+curl -Lo ~/downloads/nvim-linux-x86_64.tar.gz https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz 
 sudo rm -rf /opt/nvim
-sudo tar -C /opt -xzf nvim-linux-x86_64.tar.gz
+sudo tar -C /opt -xzf ~/downloads/nvim-linux-x86_64.tar.gz
